--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.3.11",
         "autoprefixer": "^10.4.15",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
@@ -14,6 +15,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@vitejs/plugin-vue": "^4.5.2"
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@vitejs/plugin-vue": "^4.5.2",
+        "vue": "^3.2.36"
     }
 }
