--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,7 @@
 {
-	"plugins": [
-		"prettier-plugin-tailwindcss"
-	],
+	"plugins": ["prettier-plugin-tailwindcss"],
 	"trailingComma": "es5",
+	"useTabs": true,
 	"tabWidth": 2,
 	"semi": true,
 	"singleQuote": false
