--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "@vue/compiler-sfc": "^3.3.11",
-        "autoprefixer": "^10.4.15",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.29",
-        "prettier": "^3.1.1",
-        "prettier-plugin-tailwindcss": "^0.5.9",
-        "tailwindcss": "^3.3.3",
-        "vite": "^4.0.0"
-    },
-    "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-vue3": "^0.6.0",
-        "@vitejs/plugin-vue": "^4.5.2",
-        "vue": "^3.2.36"
-    }
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@vue/compiler-sfc": "^3.3.11",
+		"autoprefixer": "^10.4.15",
+		"axios": "^1.1.2",
+		"laravel-vite-plugin": "^0.8.0",
+		"postcss": "^8.4.29",
+		"prettier": "^3.1.1",
+		"prettier-plugin-tailwindcss": "^0.5.9",
+		"tailwindcss": "^3.3.3",
+		"vite": "^4.0.0"
+	},
+	"dependencies": {
+		"@inertiajs/inertia": "^0.11.1",
+		"@inertiajs/inertia-vue3": "^0.6.0",
+		"@vitejs/plugin-vue": "^4.5.2",
+		"vue": "^3.2.36"
+	}
 }
