--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
 	"useTabs": true,
 	"tabWidth": 2,
 	"semi": true,
-	"singleQuote": false
+	"singleQuote": false,
+	"singleAttributePerLine": true
 }
