--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@inertiajs/inertia": "^0.11.1",
 		"@inertiajs/inertia-vue3": "^0.6.0",
 		"@vitejs/plugin-vue": "^4.5.2",
+		"flowbite": "^2.2.1",
 		"vue": "^3.2.36"
 	}
 }
