--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"prepare": "husky install"
 	},
 	"devDependencies": {
 		"@vue/compiler-sfc": "^3.3.11",
 		"autoprefixer": "^10.4.15",
 		"axios": "^1.1.2",
+		"husky": "^8.0.0",
 		"laravel-vite-plugin": "^0.8.0",
+		"lint-staged": "^15.2.0",
 		"postcss": "^8.4.29",
 		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.9",
@@ -23,5 +26,10 @@
 		"@vitejs/plugin-vue": "^4.5.2",
 		"flowbite": "^2.2.1",
 		"vue": "^3.2.36"
+	},
+	"lint-staged": {
+		"**/*.{js,jsx,ts,tsx}": [
+			"npm run format"
+		]
 	}
 }
