--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
 		"dev": "vite",
 		"build": "vite build",
 		"format": "prettier --write .",
+		"lint": "eslint \"resources/js/**/*.{js,vue}\"",
+		"lint:fix": "eslint --fix \"resources/js/**/*.{js,vue}\"",
 		"prepare": "husky install"
 	},
 	"devDependencies": {
 		"@vue/compiler-sfc": "^3.3.11",
 		"autoprefixer": "^10.4.15",
 		"axios": "^1.1.2",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-vue": "^9.19.2",
 		"husky": "^8.0.0",
 		"laravel-vite-plugin": "^0.8.0",
 		"lint-staged": "^15.2.0",
@@ -28,8 +33,9 @@
 		"vue": "^3.2.36"
 	},
 	"lint-staged": {
-		"**/*.{js,jsx,ts,tsx}": [
-			"npm run format"
+		"**/*.{js,vue}": [
+			"npm run format",
+			"npm run lint:fix"
 		]
 	}
 }
