--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
 		"vue": "^3.3.0"
 	},
 	"lint-staged": {
-		"**/*.{js,vue}": [
-			"npm run format",
-			"npm run lint:fix"
+		"*.{vue,js,css}": [
+			"prettier --write",
+			"eslint --fix"
 		]
 	}
 }
