--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@inertiajs/vue3": "^1.0.14",
 		"@vitejs/plugin-vue": "^4.5.2",
 		"flowbite": "^2.2.1",
+		"swiper": "^11.0.5",
 		"vue": "^3.3.0"
 	},
 	"lint-staged": {
