--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"inertiajs/inertia-laravel": "^0.6.11",
 		"laravel/framework": "^10.10",
 		"laravel/sanctum": "^3.2",
-		"laravel/tinker": "^2.8"
+		"laravel/tinker": "^2.8",
+		"spatie/laravel-medialibrary": "11.0"
 	},
 	"require-dev": {
 		"fakerphp/faker": "^1.9.1",
