--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"tailwindcss": "^3.3.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"vite-svg-loader": "^5.1.0"
 	},
 	"dependencies": {
 		"@inertiajs/vue3": "^1.0.14",
