--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 		"elegantweb/sanitizer": "^2.1",
 		"guzzlehttp/guzzle": "^7.2",
 		"inertiajs/inertia-laravel": "^0.6.11",
+		"laravel-validation-rules/credit-card": "^1.8",
 		"laravel/framework": "^10.10",
 		"laravel/sanctum": "^3.2",
 		"laravel/tinker": "^2.8",
