--- a/fly.toml
+++ b/fly.toml
@@ -15,6 +15,7 @@ console_command = 'php /var/www/html/artisan tinker'
 [env]
   APP_ENV = 'production'
 	APP_URL='https://the-wordsmiths-collection.fly.dev'
+	DB_CONNECTION="pgsql"
   LOG_CHANNEL = 'stderr'
   LOG_LEVEL = 'info'
   LOG_STDERR_FORMATTER = 'Monolog\Formatter\JsonFormatter'
@@ -28,6 +29,10 @@ console_command = 'php /var/www/html/artisan tinker'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
+
+[mounts]
+  source="storage_vol"
+  destination="/var/www/html/storage"
 
 [[vm]]
   memory = '1gb'
